Fix left spacing of icons

--- a/src/Pages/Connect/Connect.css
+++ b/src/Pages/Connect/Connect.css
@@ -37,27 +37,27 @@ padding-bottom: 20px;
 
 .email {
   margin-top: 30px;
-  margin-left: 70px;
+  margin-left: 5px;
 }
 
 .linkedin{
   margin-top: 30px;
-  margin-left: 70px;
+  margin-left: 5px;
 }
 
 .github {
   margin-top: 30px;
-  margin-left: 70px;
+  margin-left: 5px;
 }
 
 .twitter {
   margin-top: 30px;
-  margin-left: 70px;
+  margin-left: 5px;
 }
 
 .clarity {
   width: 120px;
   height: 55px;
   margin-top: 30px;
-  margin-left: 40px;
+  margin-left: 5px;
 }
