--- a/src/Pages/Services/Services.css
+++ b/src/Pages/Services/Services.css
@@ -37,15 +37,15 @@ padding-bottom: 20px;
 
 .conversation {
   margin-top: 30px;
-  margin-left: 40px;
+  margin-left: 5px;
 }
 
 .checklist{
   margin-top: 30px;
-  margin-left: 40px;
+  margin-left: 5px;
 }
 
 .edit {
   margin-top: 30px;
-  margin-left: 40px;
+  margin-left: 5px;
 }
